# kugiri

./: .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  dist-workspace.toml  test_indent.md
.config/: binstaller.yml
.config/binstaller/: ghcp.yml
.github/actions/smart-commit/: action.yml
.github/workflows/: ci.yml  release.yml  tmp-test-extract-release-note.yml
docs/: design.md  installation-template.md
scripts/: run-ghcp.sh  update-installation.sh
src/: extract.rs  insert.rs  io.rs  lib.rs  main.rs  markers.rs  remove.rs  trim.rs  update.rs  upsert.rs  utils.rs  wrap.rs
tests/: run_golden_tests.sh  trailing_newline_test.rs
tests/fixtures/: basic.md  content.txt  indented.md  nested.md  test.md  test_indent.md  test_nested.md  with_insert.md
tests/golden/: extract_basic.golden  extract_indented.golden  extract_nested_inner.golden  extract_nested_outer.golden  insert_after_insert_marker.golden  insert_after_section.golden  insert_before_section.golden  insert_indented.golden  remove_nested.golden  remove_section.golden  trim_all_markers.golden  update_basic.golden  update_indented.golden  update_nested.golden  upsert_existing.golden  upsert_new.golden  wrap_content.golden  wrap_multiline.golden
